Update baseURL for GitHub Pages deployment

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://ayush.github.io/hugosample/"
+baseURL: "https://hsuyab.github.io/hugosample/"
 languageCode: en-us
 title: "My Hugo Blog"
 theme: PaperMod
